--- a/2-snackbar.html
+++ b/2-snackbar.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snackbar</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+  <script type="module" crossorigin src="/goit-js-hw-10/2-snackbar.js"></script>
+  <link rel="modulepreload" crossorigin href="/goit-js-hw-10/assets/styles-C_BkJ-UJ.js">
+  <link rel="modulepreload" crossorigin href="/goit-js-hw-10/assets/vendor-BbbuE1sJ.js">
+  <link rel="stylesheet" crossorigin href="/goit-js-hw-10/assets/styles-C6Tjyixc.css">
+  <link rel="stylesheet" crossorigin href="/goit-js-hw-10/assets/vendor-CZjNVMTf.css">
 </head>
 
 <body>
@@ -31,7 +35,6 @@
         <button type="submit" class="form_button">Create notification</button>
     </form>
 
-    <script type="module" src="./js/2-snackbar.js"></script>
 </body>
 
 </html>
